// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opens with some wallets without crashing 1`] = `
<ModalPassword
  walletList={
    Array [
      "asdf",
      "demo",
    ]
  }
>
  <div
    className="ModalPassword"
  >
    <div
      className="ModalBackground"
      onClick={[Function]}
    />
    <div
      className="ModalContent"
    >
      <header
        className="ModalContentHeader"
      >
        Unlock your wallet.
      </header>
      <form>
        <label
          htmlFor="address"
        >
          Wallet Address
        </label>
        <select
          id="address"
          onChange={[Function]}
          value=""
        >
          <option
            key="asdf"
            value="asdf"
          >
            asdf
          </option>
          <option
            key="demo"
            value="demo"
          >
            demo
          </option>
        </select>
        <label
          htmlFor="password"
        >
          Wallet Password
        </label>
        <input
          id="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <span>
          <input
            id="store"
            onChange={[Function]}
            type="checkbox"
            value={false}
          />
          <label
            htmlFor="store"
          >
            Keep this wallet unlocked
          </label>
        </span>
        <div
          className="ModalError"
        />
      </form>
      <span
        className="Modal-Button-Bar"
      >
        <Button
          disabled={false}
          flat={true}
          onClick={[Function]}
        >
          <button
            className="Button flat"
            disabled={false}
            onClick={[Function]}
          >
            Unlock
          </button>
        </Button>
        <Button
          cancel={true}
          disabled={false}
          flat={true}
          onClick={[Function]}
        >
          <button
            className="Button flat-cancel"
            disabled={false}
            onClick={[Function]}
          >
            Cancel
          </button>
        </Button>
      </span>
    </div>
  </div>
</ModalPassword>
`;

exports[`opens without crashing 1`] = `
<ModalPassword
  walletList={Array []}
>
  <div
    className="ModalPassword"
  >
    <div
      className="ModalBackground"
      onClick={[Function]}
    />
    <div
      className="ModalContent"
    >
      <header
        className="ModalContentHeader"
      >
        Create a wallet
      </header>
      <form>
        <label
          htmlFor="password"
        >
          Wallet Password
        </label>
        <input
          id="password"
          onChange={[Function]}
          type="password"
          value=""
        />
        <span>
          <input
            id="store"
            onChange={[Function]}
            type="checkbox"
            value={false}
          />
          <label
            htmlFor="store"
          >
            Keep this wallet unlocked
          </label>
        </span>
        <div
          className="ModalError"
        />
      </form>
      <span
        className="Modal-Button-Bar"
      >
        <Button
          disabled={false}
          flat={true}
          onClick={[Function]}
        >
          <button
            className="Button flat"
            disabled={false}
            onClick={[Function]}
          >
            Create
          </button>
        </Button>
        <Button
          cancel={true}
          disabled={false}
          flat={true}
          onClick={[Function]}
        >
          <button
            className="Button flat-cancel"
            disabled={false}
            onClick={[Function]}
          >
            Cancel
          </button>
        </Button>
      </span>
    </div>
  </div>
</ModalPassword>
`;

exports[`renders without crashing 1`] = `
<div
  class="ModalPassword"
>
  
</div>
`;
